--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Frontend Mentor | Recipe page</title>
+    <title>Workout Coach</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
